--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <app-bpm-display />
-    <app-tap-button />
-    <app-play-button />
-    <app-beats />
+    <div>
+        <router-outlet></router-outlet>
+        <app-nav />
+    </div>
 </div>
