written the reducers and tempo detection logic

--- a/src/app/bpm-display/bpm-display.component.html
+++ b/src/app/bpm-display/bpm-display.component.html
@@ -1,4 +1,4 @@
 <div class="display">
-    <p class="display__title">BPM</p>
-    <p class="display__value">{{ bpm }}</p>
+    <p class="display__title">Tempo</p>
+    <p class="display__value">{{ tempo | number : "1.0-0" }}</p>
 </div>
