--- a/src/app/metronome-page/metronome-page.component.html
+++ b/src/app/metronome-page/metronome-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <app-bpm-display />
+    <app-bpm-display [tempo]="tempo" />
     <app-tap-button />
     <app-play-button />
     <app-beats />
