--- a/src/app/tap-button/tap-button.component.html
+++ b/src/app/tap-button/tap-button.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <app-button>Tap to determine BPM</app-button>
+    <app-button (clickEvent)="updateTempo()">Tap to determine BPM</app-button>
 </div>
