--- a/src/app/beat/beat.component.scss
+++ b/src/app/beat/beat.component.scss
@@ -2,6 +2,9 @@
     border-radius: 100%;
     width: 2.5rem;
     height: 2.5rem;
-    background-color: var(--clr-secondary-faint);
     border: 2px solid var(--clr-secondary-light);
+}
+
+.active {
+    background-color: var(--clr-secondary);
 }
