adding tempo slider

--- a/src/app/metronome-page/metronome-page.component.html
+++ b/src/app/metronome-page/metronome-page.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <app-bpm-display [tempo]="tempo" />
+    <app-tempo-slider />
     <app-tap-button />
     <app-play-button />
     <app-beats />
