--- a/src/app/settings-page/settings-page.component.html
+++ b/src/app/settings-page/settings-page.component.html
@@ -1,1 +1,15 @@
-<p>settings-page works!</p>
+<div class="container">
+    <h2>Settings</h2>
+    <div class="form-group">
+        <label>Number of Beats</label>
+        <select [formControl]="beatsControl">
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+        </select>
+    </div>
+</div>
