written description page and read me

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,8 +5,10 @@
     <a routerLink="/settings">
         <ng-icon name="featherSettings" routerLink="/settings"></ng-icon>
     </a>
+    <a href="/tech">
+        <ng-icon name="featherBook"></ng-icon>
+    </a>
     <a href="#">
         <ng-icon name="featherGithub"></ng-icon>
     </a>
-    <ng-icon name="featherMoon"></ng-icon>
 </div>
