adding tests for all components

--- a/src/app/bpm-display/bpm-display.component.html
+++ b/src/app/bpm-display/bpm-display.component.html
@@ -1,4 +1,6 @@
 <div class="display">
     <p class="display__title">Tempo</p>
-    <p class="display__value">{{ tempo | number : "1.0-0" }}</p>
+    <p class="display__value" data-testid="display-value">
+        {{ tempo | number : "1.0-0" }}
+    </p>
 </div>
