--- a/src/app/settings-page/settings-page.component.html
+++ b/src/app/settings-page/settings-page.component.html
@@ -2,7 +2,7 @@
     <h2>Settings</h2>
     <div class="form-group">
         <label>Number of Beats</label>
-        <select [formControl]="beatsControl">
+        <select [formControl]="beatsControl" data-testid="select-beats">
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
