fix the github link

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,10 +5,10 @@
     <a routerLink="/settings">
         <ng-icon name="featherSettings" routerLink="/settings"></ng-icon>
     </a>
-    <a href="/tech">
+    <a routerLink="/tech">
         <ng-icon name="featherBook"></ng-icon>
     </a>
-    <a href="#">
+    <a href="https://github.com/derekh715/angular-metronome">
         <ng-icon name="featherGithub"></ng-icon>
     </a>
 </div>
